--- a/RDEvent/RDEvent.csproj
+++ b/RDEvent/RDEvent.csproj
@@ -88,6 +88,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\Database1.mdf" />
+    <Content Include="App_Data\Database1_log.ldf">
+      <DependentUpon>Database1.mdf</DependentUpon>
+    </Content>
     <Content Include="Content\barfiller.css" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
@@ -181,6 +185,10 @@
     <Content Include="Views\Events\AdminEvents.cshtml" />
     <Content Include="Views\Events\AddEvents.cshtml" />
     <Content Include="Views\Events\EditEvent.cshtml" />
+    <Content Include="Views\Profile\NonSkating.cshtml" />
+    <Content Include="Views\Login\ForgotPassword.cshtml" />
+    <Content Include="Views\Login\ForgotCode.cshtml" />
+    <Content Include="Views\Login\NewPassword.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -189,7 +197,6 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
     <Folder Include="Models\" />
     <Folder Include="NewFolder1\" />
   </ItemGroup>
