--- a/RDEvent/Web.config
+++ b/RDEvent/Web.config
@@ -13,8 +13,11 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-  </appSettings>
+  <add key="MvcMailer.BaseURL" value="" /></appSettings>
   <system.web>
+    <authentication mode="Forms">
+      <forms cookieless="UseCookies" loginUrl="~/Login/Login" slidingExpiration="true"></forms>
+    </authentication>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
@@ -30,7 +33,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -53,4 +56,19 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-</configuration>
+<system.net>
+		<mailSettings>
+			<!-- Method#1: Configure smtp server credentials -->
+			<smtp from="some-email@gmail.com">
+				<network enableSsl="true" host="smtp.gmail.com" port="587" userName="some-email@gmail.com" password="valid-password" />
+			</smtp>
+			
+			<!-- Method#2: Dump emails to a local directory -->
+			<!--
+			<smtp from="some-email@gmail.com" deliveryMethod="SpecifiedPickupDirectory">
+				<network host="localhost" />
+				<specifiedPickupDirectory pickupDirectoryLocation="c:\temp\"/>
+			</smtp>
+			-->
+		</mailSettings>
+	</system.net></configuration>
